--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 logos = "0.15"
-chumsky = "0.11"
+# chumsky = "0.11"
 miette = { version = "7.6", features = ["fancy"] }
 thiserror = "2.0"
 colored = "3.0"
