--- a/pretty-fmt/macros/Cargo.toml
+++ b/pretty-fmt/macros/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 syn = "2.0"
 quote = "1.0"
+proc-macro2 = "1.0"
+pretty-fmt = { path = "../pretty-fmt" }
 
 [lib]
 proc-macro = true
