--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+colored = "3.0"
 pretty-fmt = { path = "../pretty-fmt/pretty-fmt" }
 pretty-fmt-macros = { path = "../pretty-fmt/macros" }
