--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["compiler", "pretty-fmt/macros", "pretty-fmt/pretty-fmt", "test"]
+members = ["compiler", "pretty-fmt/macros", "pretty-fmt/pretty-fmt", "tests"]
 resolver = "3"
